@@ -1,14 +1,0 @@
-load "/Volumes/LaCie/diag/diag/io_model_grd.ncl"
-dev = "x11"
-plotid = "HT"
-runid = "model"
-obsid = "ANNUAL_TRANSPORTS_1985_1989"
-ctlid = ""
-rundir = "/Volumes/LaCie/diag/model"
-obsdir = "/Volumes/LaCie/diag/obs_data"
-ctldir = "/Volumes/LaCie/diag/"
-georun = "/Volumes/Lacie/research/Models/afes/data/geo/T119"
-geoctl = "/Volumes/Lacie/research/Models/afes/data/geo/T119"
-color = "amwg"
-time = 0
-lseasonal = True
