@@ -5,7 +5,7 @@ DIAGDIR=`dirname $0`
 export DIAGDIR
 echo $DIAGDIR
 
-DEV=x11
+DEV=pdf
 RUNID=model
 CTLID=
 FFMT=grd
@@ -40,8 +40,8 @@ LWIDS="T2"
 #NCEPCEIDS="SFCG SENS SLP"
 NCEPCEIDS="SENS SLP"
 NCEPVECIDS="TAUXY UV10"
-ERBEIDS="OSR OLR"
-ISCCPFDIDS="SSRD SLRD SSR SLR"
+ERBEIDS="OSR OLR RT"
+ISCCPFDIDS="SSRD SLRD SSR SLR FS"
 YZIDS="UYZ TYZ QYZ OMGYZ"
 TYIDS="U200 V200"
 
