@@ -190,4 +190,18 @@ begin
                    18., 20., 22., 24., 26., 28., 29. /)
     dclevs@SST = (/-5., -4., -3., -2., -1., -0.5, -0.2, 0., \
                     0.2, 0.5, 1.,  2.,  3.,  4.,   5./)
+
+    varname@RT = "RT"
+    lev@RT = 0
+    clevs@RT = (/-150., -120., -100., -80., -60., -40., -20., 0., \
+                    20.,   40.,   60.,  80., 100., 120., 150. /)
+    dclevs@RT = (/-60., -50., -40., -30., -20., -10., -5., 0., \
+                     5.,  10.,  20.,  30.,  40.,  50., 60./)
+
+    varname@FS = "FS"
+    lev@FS = 0
+    clevs@FS = (/-150., -120., -100., -80., -60., -40., -20., 0., \
+                    20.,   40.,   60.,  80., 100., 120., 150. /)
+    dclevs@FS = (/-100., -75., -50., -40., -30., -20., -10., 0., \
+                     10.,  20.,  30.,  40.,  50.,  75., 100./)
 end
